cloudarmor-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: my-app
  name: service-foo
  annotations: 
    beta.cloud.google.com/backend-config: '{"ports": {"80":"backend-config"}}'
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
    name: http
    nodePort: 30061
  selector:
    app: my-app
  type: NodePort
