cloudarmor-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: my-app
  name: service-neg
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"80":"backend-config"}}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
    name: http
  selector:
    app: my-app
