ingress-default.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-default
spec:
  backend:
    serviceName: service-neg
    servicePort: 80
